# APIX-CODE

./: .gitignore  cli.py  config.py  config.yaml  events.py  llm.py  main.py  pipeline_runtime.py  pipelines.yaml  prompts.py  pyproject.toml  runtime.py  tui.py
APIX-CORE/commons/: auto_init.py  common_func.py  file_utils.py  logger.py  resource_cleaner.py  type_def.py
APIX-CORE/context/: __init__.py  context_manager.py  generating_cache.py
APIX-CORE/engine/: __init__.py  agent.py  agent_creator.py  agent_node.py  agent_node_base.py  sub_agent_node.py  task_manager.py
APIX-CORE/event/: generation_manager.py  stream_writer.py
APIX-CORE/llm/: llm_adapter.py  llm_creator.py  llm_factory.py
APIX-CORE/prompts/: agent_prompts.py
APIX-CORE/tools/: __init__.py  code_runner.py  coding_tools.py  communication.py  file_ops.py  langchain_tools.py  registry.py  sub_assistant.py  todo.py  tool_descriptions.py  tool_node.py
APIX-CORE/tools/mcp/: mcp_manager.py
APIX-CORE/tools/web_search/: search_tool.py
agents/default/: agent.yaml
agents/default/prompts/: system.md
agents/planner/: agent.yaml
agents/planner/prompts/: system.md
agents/scout/: agent.yaml
agents/scout/prompts/: system.md
agents/worker/: agent.yaml
agents/worker/prompts/: system.md
